--- a/mycelium/apps/dashboard/templates/dashboard/_the_numbers.html
+++ b/mycelium/apps/dashboard/templates/dashboard/_the_numbers.html
@@ -1,35 +1,37 @@
 {% load humanize %}
+<column_content>
 <div class="number_row total_donors">
-	<number>{{total_donors.donor__count|intcomma}}</number>
-	<description>Donors this year</description>
+	<number>{{total_donations.donor__count|floatformat:0|intcomma}}</number>
+	<description>donors this year</description>
 </div>
 
 <div class="number_row total_donations">
-	<number>$ {{total_donations.amount__sum|intcomma}}</number>
-	<description>Donations this year</description>
+	<number>$ {{total_donation_amount.amount__sum|floatformat:0|intcomma}}</number>
+	<description>donations this year</description>
 </div>
 
 <div class="number_row total_volunteer_hours">
-	<number>{{total_volunteer_hours.duration__sum|intcomma}}</number>
-	<description>Volunteer hours</description>
+	<number>{{total_volunteer_hours.duration__sum|floatformat:0|intcomma}}</number>
+	<description>volunteer hours</description>
 </div>
 
 <div class="number_row total_people">
 	<number>{{total_people|intcomma}}</number>
-	<description>People in GoodCloud</description>
+	<description>people</description>
 </div>
 
 <div class="number_row total_orgs">
 	<number>{{total_orgs|intcomma}}</number>
-	<description>Organizations</description>
+	<description>organizations</description>
 </div>
 
 <div class="number_row total_groups">
 	<number>{{total_groups|intcomma}}</number>
-	<description>Groups</description>
+	<description>groups</description>
 </div>
 
 <div class="number_row total_tags">
 	<number>{{total_tags|intcomma}}</number>
-	<description>Tags</description>
+	<description>tags</description>
 </div>
+</column_content>
