--- a/mycelium/apps/dashboard/templates/dashboard/dashboard.html
+++ b/mycelium/apps/dashboard/templates/dashboard/dashboard.html
@@ -46,7 +46,7 @@
 {% if not request.account.has_completed_all_challenges %}
 	<td class="full_col">
 		<column_header>GoodCloud Challenges</column_header>
-		<div class="challenge_description plain_text" >Complete the six GoodCloud Challenges and receive a 50% discount on your first month of use. What's that you say? Half off just for setting things up and doing a quick tour? Are we crazy? Well, yes. But we really think GoodCloud is the best solution out there for small nonprofits, and we're ready to prove it.</div>
+		<div class="challenge_description plain_text" >Complete the six GoodCloud Challenges and receive a 50% discount on your first month of use. What's that you say? Half off just for setting things up and doing a quick tour? Are we crazy? Well, yes. But we really believe GoodCloud is the best solution out there for small nonprofits, and we're ready to prove it.</div>
 
 		<challenge class="{% if request.account.challenge_has_imported_contacts %}complete{% endif %}">
 			<title_text>Import your contacts.</title_text>
