--- a/media/css/mycelium_elements.css
+++ b/media/css/mycelium_elements.css
@@ -8,55 +8,19 @@ Orange: #ff6600;
 */
 
 body {
-	/*background: url("../images/green_tweed_background.gif");*/
 	background: url("../images/background-noise-green.png");
-
 }
-
-
-
-logo {
-	display: block;
-	position: absolute;	
-	top: 0px;
-	left: 10px;
-	font-size: 45px;
-	color: #FFF;
-	text-shadow:		 1px 1px 1px #06381C;
-	-moz-text-shadow:    1px 1px 1px #06381C;
-	-webkit-text-shadow: 1px 1px 1px #06381C;
-	height: 70px;
-	
-	padding-left: 90px;
-	background: url("../images/goodcloud-logo-40.png");
-
-/*	padding-left: 60px;*/
-/*	background: url("../images/goodcloud-logo2-40.png");	*/
-	background-position: 5px 5px;
-	background-repeat: no-repeat;
-	line-height: 50px;
-}
-logo small {
-	font-size: 36px;
-}
-
-
 main_nav {
 	display: block;
 	position: absolute;	
 	top: 0px;
-	right: 4%;
-	width: auto;
+	right: 0%;
+	width: 100%;
 	height: 40px;
 	background: #EEE;
-	border-bottom-left-radius: 4px;
-	-moz-border-radius-bottomleft: 4px;
-	-webkit-border-bottom-left-radius: 4px;	
-	border-bottom-right-radius: 4px;
-	-moz-border-radius-bottomright: 4px;
-	-webkit-border-bottom-right-radius: 4px;	
 
     overflow: hidden;
+
 }
 main_nav a {
 	text-decoration: none;
@@ -67,11 +31,24 @@ main_nav a {
 	padding: 5px 20px 4px 20px;
 	margin: 0px;
 	display: block;
-	float: left;
+	float: right;
 
 }
 main_nav a.current {
 	border-bottom: 4px solid #3E9CFD;
+}
+main_nav a.first {
+	border-left: 1px solid #DDD;
+}
+main_nav a.logo {
+	background-image: url("../images/goodcloud-logo-40.png");
+	background-position: 5px 0px;
+	background-repeat: no-repeat;
+	width: 40px;	
+	float: left;
+	display: block;
+	height: 70px;
+	border: 0px;
 }
 
 footer {
@@ -91,6 +68,28 @@ footer a:hover {
 	color: #FFF;
 	text-decoration: none;
 }
+#global_search {
+	margin: 4px 0px 0px 10px;
+	padding: 4px 0px;
+	border: 0px solid #BBB;
+	padding-left: 24px;
+	width: 25%;
+	font-size: 18px;
+	background-image: url("../images/search-18.png");
+	background-position: 8px 6px;
+	background-repeat: no-repeat;
+	outline-style:none;
+	background-color: #F8F8F8;
+	
+	border-radius: 20px;
+	-moz-border-radius: 20px;
+	-webkit-border-radius: 20px;
+	outline: none;
+	box-shadow: 		inset 0px 1px 2px rgba(0,0,0,0.55);
+	-moz-box-shadow: 	inset 0px 1px 2px rgba(0,0,0,0.55);
+	-khtml-box-shadow: 	inset 0px 1px 2px rgba(0,0,0,0.55);
+}
+
 page_title {
 	display: block;
 	font-size: 30px;
