--- a/mycelium/apps/mycelium_core/templates/mycelium_core/more_menu.html
+++ b/mycelium/apps/mycelium_core/templates/mycelium_core/more_menu.html
@@ -8,13 +8,18 @@
 {% block page_content %}
 <div class="more_buttons">
 	<div class="more_row">
-	<a href="{% url reports:search %}" class="mycelium_btn more_button reports_btn">
+<!--	<a href="{% url reports:search %}" class="mycelium_btn more_button reports_btn">
 		<div class="button_title">Spreadsheets</div>
 		<div class="button_description">Create and download custom spreadsheets</div>
 	</a>
+-->
 	<a href="{% url accounts:my_account %}" class="mycelium_btn more_button my_account_button">
 		<div class="button_title">My Account</div>
 		<div class="button_description">Update username, password, and contact info</div>
+	</a>
+	<a href="{% url generic_tags:manage %}" class="mycelium_btn more_button tag_button">
+		<div class="button_title">Tags</div>
+		<div class="button_description">Manage Tags and Tag Categories</div>
 	</a>
 	</div>
 	{% if request.useraccount.is_admin %}
@@ -34,10 +39,7 @@
 		<div class="button_title">Data Import</div>
 		<div class="button_description">Import records from other systems into GoodCloud</div>
 	</a>
-	<a href="{% url generic_tags:manage %}" class="mycelium_btn more_button tag_button">
-		<div class="button_title">Tags</div>
-		<div class="button_description">Manage Tags and Tag Categories</div>
-	</a>
+	
 	</div>
 <!--	<div class="more_row">
 		<a href="{% url logo_maker:list_logos %}" class="mycelium_btn more_button logo_button">
