--- a/mycelium/apps/accounts/templates/accounts/manage_my_account.html
+++ b/mycelium/apps/accounts/templates/accounts/manage_my_account.html
@@ -11,7 +11,7 @@
 {% js "/js/mycelium/manage_accounts.js" %}
 {% endblock %}
 
-{% block breadcrumb_links %}<a href="{% url core:more_menu %}" >Back to More</a>{% endblock %}
+{% block breadcrumb_links %}<a href="{% url core:more_menu %}" >Back to Admin</a>{% endblock %}
 
 {% block page_content %}
 <page_title>Your GoodCloud Account</page_title>
