top nav bar looks good

--- a/mycelium/apps/dashboard/templates/dashboard/dashboard.html
+++ b/mycelium/apps/dashboard/templates/dashboard/dashboard.html
@@ -37,7 +37,7 @@
 			Looks like you haven't finished up the challenges quite yet - keep at it, and let us know if you have any questions!
 		{% endif %}
 	{% else %}
-		You made it! Welcome to your very own GoodCloud and your free 30-day trial. We're excited to have you on board. Check out the GoodCloud challenges below for a great way to get started!
+		You made it! Welcome to your very own GoodCloud for {{request.account}}. We're excited to have you on board. Check out the challenges below for a great way to get started!
 	{% endif %}
 </div>
 
