--- a/media/css/mycelium_elements.css
+++ b/media/css/mycelium_elements.css
@@ -1,5 +1,4 @@
-/*
-Colors:
+/* Colors:
 Blue: #000486
 Light Blue: #006bcf;
 Grad: 0073de to ;
@@ -16,38 +15,53 @@ main_nav {
 	top: 0px;
 	right: 0%;
 	width: 100%;
-	height: 40px;
-	background: #EEE;
+	height: 45px;
+	/*background: #F2F2F2;*/
 
     overflow: hidden;
-
+	background-image: url("../images/nav-top-bar.png");
+	background-repeat: repeat-x;
 }
-main_nav a {
+main_nav a.nav_btn {
 	text-decoration: none;
-	border-right: 1px solid #DDD;
-	border-bottom: 4px solid #BBB;
+	border-right: 1px solid #EEE;
+	/*border-bottom: 4px solid #BBB;*/
 	border-top-width: 0px;
 	font-size: 23px;
-	padding: 5px 20px 4px 20px;
+	padding: 9px 20px 8px 20px;
 	margin: 0px;
 	display: block;
 	float: right;
-
+	text-shadow: -1px -1px 1px rgba(255,255,255,0.3);
+	color: #808080;
+	cursor: pointer;
+}
+main_nav a.nav_btn:hover {
+	color: #656565;
+}
+main_nav a.nav_btn.current:hover {
+	color: #FFF;
 }
 main_nav a.current {
-	border-bottom: 4px solid #3E9CFD;
+/*	border-bottom: 4px solid #3E9CFD;*/
+	/*background-color: #FFF;*/
+	color: #000486;
+	text-shadow: 1px 1px 0px rgba(0,0,0,0.2);
+	background-image: url("../images/nav-top-bar-current.png");
+	background-repeat: repeat-x;
+	color: #FFF;
 }
 main_nav a.first {
 	border-left: 1px solid #DDD;
 }
 main_nav a.logo {
 	background-image: url("../images/goodcloud-logo-40.png");
-	background-position: 5px 0px;
+	background-position: 5px 2px;
 	background-repeat: no-repeat;
-	width: 40px;	
+	width: 80px;	
 	float: left;
 	display: block;
-	height: 70px;
+	height: 45px;
 	border: 0px;
 }
 
@@ -69,7 +83,7 @@ footer a:hover {
 	text-decoration: none;
 }
 #global_search {
-	margin: 6px 0px 0px 10px;
+	margin: 9px 0px 0px 10px;
 	padding: 4px 0px;
 	border: 0px solid #BBB;
 	padding-left: 24px;
@@ -89,7 +103,9 @@ footer a:hover {
 	-moz-box-shadow: 	inset 0px 1px 2px rgba(0,0,0,0.55);
 	-khtml-box-shadow: 	inset 0px 1px 2px rgba(0,0,0,0.55);
 }
-
+#global_search:focus {
+	background-color:#FFF;
+}
 page_title {
 	display: block;
 	font-size: 30px;
