--- a/media/css/mycelium_elements.css
+++ b/media/css/mycelium_elements.css
@@ -64,7 +64,38 @@ main_nav a.logo {
 	height: 45px;
 	border: 0px;
 }
-
+main_nav .username_and_logout {
+	float: right;
+	display: block;
+	/*width: 140px;*/
+	text-align: center;
+	color: #BBB;
+	padding: 6px 20px 2px 20px;
+}
+main_nav .username_and_logout .username {
+	font-size: 12px;
+}
+main_nav .username_and_logout a.logout_btn {
+	color: #999;
+	font-size: 14px;
+}
+main_nav .username_and_logout a.logout_btn:hover {
+	color: #888;
+}
+main_nav .username_and_logout a.admin_btn {
+	padding: 0px 4px 1px 18px;
+	margin-right: 16px;
+	font-size: 13px;
+	background-image: url("../images/icon-settings-grey-12.png");
+	background-position: 2px 2px;
+	background-repeat: no-repeat;
+	color: #888;
+	background-color: #EEE;
+}
+main_nav .username_and_logout a.admin_btn:hover {
+	background-color: #DDD;
+	color: #777;
+}
 footer {
 	text-align: center;
 	color: #FFF;
