--- a/media/css/mycelium_elements.css
+++ b/media/css/mycelium_elements.css
@@ -16,7 +16,7 @@ main_nav {
 	right: 0%;
 	width: 100%;
 	height: 45px;
-	/*background: #F2F2F2;*/
+	/*background-color: #F2F2F2;*/
 
     overflow: hidden;
 	background-image: url("../images/nav-top-bar.png");
