--- a/mycelium/apps/groups/templates/groups/_search_results.html
+++ b/mycelium/apps/groups/templates/groups/_search_results.html
@@ -4,8 +4,7 @@
 <table class="results_table striped">
 	<tr class="person_row header">
 		<th class="name">Name</th>
-		<th class="email">Email</th>
-		<th class="phone_number">Phone Number</th>
+		<th class="phone_number"># of Members</th>
 	</tr>
 {% for p in search_proxies %}{{p.search_result_row|safe}}{% endfor %}
 	<tr><td colspan="5" class="pagination_row">
