--- a/mycelium/apps/groups/templates/groups/_search_result_row_group.html
+++ b/mycelium/apps/groups/templates/groups/_search_result_row_group.html
@@ -6,6 +6,6 @@
 			<span class="highlightable">{{obj.full_name}}</span>
 		</a>
 	</td>
-	<td class="col_1 num_members hide_in_global ">{{obj.num_members|intcomma}}</td>
-	<td class="col_2 hide_in_global"></td>
+	<td class="col_1 num_members "><span class="hide_in_global">{{obj.num_members|intcomma}}</span></td>
+	<td class="col_2 "></td>
 </tr>
