--- a/mycelium/apps/people/templates/people/_search_result_row_organization.html
+++ b/mycelium/apps/people/templates/people/_search_result_row_organization.html
@@ -5,6 +5,6 @@
 			<span class="highlightable">{{obj.full_name}}</span>
 		</a>
 	</td>
-	<td class="col_1 email hide_in_global"></td>
-	<td class="col_2 phone_number highlightable ">{{obj.primary_phone_number|clean_none}}</td>
+	<td class="col_1 email "></td>
+	<td class="col_2 phone_number highlightable  ">{{obj.primary_phone_number|clean_none}}</td>
 </tr>
